--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@
 }
 
 .mysthic-card-field {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -105,6 +106,7 @@
 }
 .mysthic-card-field__card-field {
   width: 100%;
+  height: 40%;
   display: flex;
   justify-content: space-between;
 }
